--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
         "docker:build": "docker build -t ugi-rankings .",
         "docker:run": "docker-compose up -d",
         "docker:stop": "docker-compose down",
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "test": "jest",
+        "test:watch": "jest --watch",
+        "test:coverage": "jest --coverage"
     },
     "keywords": [
         "ugi",
@@ -33,6 +35,9 @@
         "ts-node-dev": "^2.0.0",
         "@types/node": "^20.0.0",
         "@types/pg": "^8.10.0",
-        "nodemon": "^3.0.0"
+        "nodemon": "^3.0.0",
+        "jest": "^29.0.0",
+        "@types/jest": "^29.0.0",
+        "ts-jest": "^29.0.0"
     }
 }
